<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity3">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="263dp"
        app:srcCompat="@drawable/first"
        tools:ignore="ContentDescription" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="199dp" />
    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/_00_00_00"
        android:textSize="24pt" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">



        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:onClick="btnStartOnClick"
            android:text="@string/start"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            android:layout_gravity="center"
            android:onClick="btnStopOnClick"
            android:id="@+id/btnStop"
            android:text="@string/stop"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btnReset"
            android:onClick="btnResetOnClick"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="Reset"

            tools:ignore="ButtonStyle,HardcodedText,UsingOnClickInXml" />
    </LinearLayout>


</LinearLayout>